--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
              <div class="social_icons">
                 <div class="icon"><a href="https://www.facebook.com/KromDane16"><i class="uil uil-facebook-f"></i></a></div>
                 <div class="icon"><a href="https://www.instagram.com/kc_arcibal/"><i class="uil uil-instagram"></i></a></div>
-                 <div class="icon"><a href="https://www.linkedin.com/in/kc16/"><i class="uil uil-linkedin-alt"></i></a></div>
-                 <div class="icon"><a href="https://github.com/keezy05"><i class="uil uil-github-alt"></i></a></div>
+                <div class="icon"><a href="https://www.linkedin.com/in/kc16/"><i class="uil uil-linkedin-alt"></i></a></div>
+                <div class="icon"><a href="https://github.com/keezy05"><i class="uil uil-github-alt"></i></a></div>
 
              </div>
             </div>
@@ -258,11 +258,10 @@
             </ul>
         </div>
         <div class="footer-social-icons">
-            <div class="icon"><i class="uil uil-facebook-f"></i></div>
-            <div class="icon"><i class="uil uil-instagram"></i></div>
-            <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
-            <div class="icon"><i class="uil uil-github-alt"></i></div>
-
+		<div class="icon"><a href="https://www.facebook.com/KromDane16"><i class="uil uil-facebook-f"></i></a></div>
+       		<div class="icon"><a href="https://www.instagram.com/kc_arcibal/"><i class="uil uil-instagram"></i></a></div>
+		<div class="icon"><a href="https://www.linkedin.com/in/kc16/"><i class="uil uil-linkedin-alt"></i></a></div>
+         	<div class="icon"><a href="https://github.com/keezy05"><i class="uil uil-github-alt"></i></a></div>
         </div>
         <div class="bottom-footer">
             <p>Copyright &copy; <a href="#home" style="text-decoration: none;">KC Arcibal</a> - All rights reserved </p>
